<resources>
    <string name="app_name">Material Design</string>
    <string name="res_titulo">Exercício 4 Élder</string>
    <string name="res_produto">Produto:</string>
    <string name="res_valor">Valor:</string>
    <string name="res_fornecedor">Fornecedor:</string>
    <string name="res_quantidade">Quantidade:</string>
    <string name="res_btnEnviar">Enviar</string>
    <string name="res_btnLimpar">Limpar</string>
    <string name="res_btnValidar">Validar</string>
    <string name="res_erroForm">O campo é obrigatório!</string>
    <string name="res_erroProduto">\nMínimo 16 caracteres!</string>
    <string name="res_erroFornecedor">\nMínimo 12 caracteres!</string>
</resources>
