<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logodelta"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/res_titulo"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:typeface="normal"
            app:fontFamily="@font/shojumaru" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_produto"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_valor"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_fornecedor"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formFornecedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_quantidade"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/formQuantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorBtnEnviar"
                android:text="@string/res_btnEnviar" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnlimpar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/colorBtnLimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/btnEnviar"
                android:layout_toLeftOf="@id/btnEnviar"
                android:text="@string/res_btnLimpar" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>